--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,4 @@ flake8-comprehensions = "^3.0"
 flake8-executable = "^2.0"
 flake8-annotations = "^2.0"
 flake8-cognitive-complexity = "^0.0.2"
+better-exceptions = "^0.2"
