--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 python = "^3.9"
 tqdm = "*"
 defusedxml = "^0.6.0"
+sortedcontainers = "^2.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "*"
