--- a/data/4/Config.cfg
+++ b/data/4/Config.cfg
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Configuration>
 	<Cpu Id="0" >
-		<Core Id="0" MacroTick ="400"/>
-		<Core Id="1" MacroTick ="400"/>
+		<Core Id="0"/>
+		<Core Id="1"/>
 	</Cpu>
 	<Cpu Id="1" >
-		<Core Id="0" MacroTick ="400"/>
-		<Core Id="1" MacroTick ="400"/>
+		<Core Id="0"/>
+		<Core Id="1"/>
 	</Cpu>
 </Configuration>
